// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Middleware inject: should call all middleware in correct order 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware inject: should call all middleware in correct order 2`] = `"abcde"`;

exports[`Middleware inject: should call all middleware in correct order 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call controller-level middleware correctly 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware inject: should call controller-level middleware correctly 2`] = `"abcde"`;

exports[`Middleware inject: should call controller-level middleware correctly 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (ALL) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "ALL",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (ALL) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (ALL) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (DELETE) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "6",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "DELETE",
  },
  "status": 200,
  "text": "DELETE",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (DELETE) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (DELETE) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (GET) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (GET) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (GET) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (HEAD) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "HEAD",
  },
  "status": 200,
  "text": undefined,
}
`;

exports[`Middleware inject: should call method-level middleware correctly (HEAD) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (HEAD) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (PATCH) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PATCH",
  },
  "status": 200,
  "text": "PATCH",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (PATCH) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (PATCH) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (POST) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "POST",
  },
  "status": 200,
  "text": "POST",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (POST) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (POST) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware inject: should call method-level middleware correctly (PUT) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PUT",
  },
  "status": 200,
  "text": "PUT",
}
`;

exports[`Middleware inject: should call method-level middleware correctly (PUT) 2`] = `"abcde"`;

exports[`Middleware inject: should call method-level middleware correctly (PUT) 3`] = `"ddeargddearg2edeargedearg2"`;

exports[`Middleware: should call all middleware in correct order 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should call all middleware in correct order 2`] = `"abc"`;

exports[`Middleware: should call controller-level middleware correctly 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should call controller-level middleware correctly 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (ALL) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "ALL",
}
`;

exports[`Middleware: should call method-level middleware correctly (ALL) 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (DELETE) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "6",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "DELETE",
  },
  "status": 200,
  "text": "DELETE",
}
`;

exports[`Middleware: should call method-level middleware correctly (DELETE) 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (GET) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should call method-level middleware correctly (GET) 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (HEAD) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "HEAD",
  },
  "status": 200,
  "text": undefined,
}
`;

exports[`Middleware: should call method-level middleware correctly (HEAD) 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (PATCH) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "5",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PATCH",
  },
  "status": 200,
  "text": "PATCH",
}
`;

exports[`Middleware: should call method-level middleware correctly (PATCH) 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (POST) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "4",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "POST",
  },
  "status": 200,
  "text": "POST",
}
`;

exports[`Middleware: should call method-level middleware correctly (POST) 2`] = `"abc"`;

exports[`Middleware: should call method-level middleware correctly (PUT) 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "PUT",
  },
  "status": 200,
  "text": "PUT",
}
`;

exports[`Middleware: should call method-level middleware correctly (PUT) 2`] = `"abc"`;

exports[`Middleware: should call server-level middleware correctly 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should call server-level middleware correctly 2`] = `"abc"`;

exports[`Middleware: should compose controller- and method-level middleware 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should compose controller- and method-level middleware 2`] = `"ab"`;

exports[`Middleware: should resolve controller-level middleware 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should resolve controller-level middleware 2`] = `"ab"`;

exports[`Middleware: should resolve method-level middleware 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/plain; charset=utf-8",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Middleware: should resolve method-level middleware 2`] = `"ab"`;
